# rose-gltf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
gltf-rose/: Cargo.toml
gltf-rose/src/: main.rs
make-lit/: Cargo.toml
make-lit/src/: main.rs
rose-file-lib/: Cargo.toml
rose-file-lib/src/: error.rs  hash.rs  lib.rs  utils.rs
rose-file-lib/src/files/: chr.rs  him.rs  ifo.rs  lit.rs  mod.rs  stb.rs  stl.rs  til.rs  tsi.rs  zca.rs  zmd.rs  zmo.rs  zms.rs  zon.rs  zsc.rs
rose-file-lib/src/io/: file.rs  mod.rs  path.rs  reader.rs  writer.rs
rose-file-lib/tests/: him.rs  ifo.rs  lit.rs  stb.rs  stl.rs  til.rs  tsi.rs  zmd.rs  zmo.rs  zms.rs  zon.rs  zsc.rs
rose-file-lib/tests/data/: 31_30.him  31_30.til  33_30.him  data.idx  eluxsamtower.zmo  empty_walk_m1.zmo  item_ani.zmo  list_faceitem_s.stl  list_quest_s.stl  list_weapon.zsc  list_zone.stb  mob_wolf2.zms  part_npc.zsc  str_itemtype.stl
rose-gltf/: Cargo.toml
rose-gltf-lib/: Cargo.toml
rose-gltf-lib/src/: animation.rs  lib.rs  mesh.rs  object_list.rs  skeletal_animation.rs  zone.rs
rose-gltf/src/: animation.rs  main.rs  mesh.rs  mesh_builder.rs  object_list.rs  skeletal_animation.rs  zone.rs
src/: main.rs
