[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James Benton <james.benton2@gmail.com>"]

[workspace]
resolver = "2"
members = [
    "rose-gltf",
    "gltf-rose",
    "make-lit",
]

[workspace.dependencies]
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
glam = "0.24.2"
gltf = "1.3.0"
gltf-json = { version = "1.3.0", features = ["extras", "KHR_lights_punctual"] }
roselib = { git = "https://github.com/exjam/rose-tools", rev = "74e440dbba51f1f0631ba24aff3a72f918e306b8" }
serde_json = "1"
image = "0.24.7"

