[workspace.package]
version = "0.8.0"
edition = "2021"
authors = [
    "James Benton <james.benton2@gmail.com>",
    "Ralph Minderhoud <ralph@rednim.com>",
]

[workspace]
resolver = "2"
members = ["rose-file-lib", "rose-gltf-lib", "rose-gltf", "make-lit"]

[workspace.dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bitflags = { version = "2.7", features = ["serde"] }
blake3 = { version = "1.5", features = ["serde"] }
byteorder = "1.5"
bytes = "1.9"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
enum-map = { version = "2.7", features = ["serde"] }
glam = "0.29"
gltf = "1.4"
gltf-json = { version = "1.4", features = ["extras", "KHR_lights_punctual"] }
human-sort = "0.2"
image = { version = "0.25" }
num-derive = "0.4"
num-traits = "0.2"
pretty_assertions = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
time = "0.3"
