[package]
name = "rose-gltf-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
glam = { workspace = true }
gltf = { workspace = true }
gltf-json = { workspace = true }
rose-file-lib = { path = "../rose-file-lib" }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
