[package]
name = "rose-gltf"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
glam = { workspace = true }
gltf = { workspace = true }
gltf-json = { workspace = true }
roselib = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
